--- a/src/Styles/reset.scss
+++ b/src/Styles/reset.scss
@@ -1,3 +1,5 @@
+@import './colors.scss';
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -15,7 +17,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video{
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -95,3 +97,25 @@ table {
  [type="submit"] {
    -webkit-appearance: button;
  }
+
+ button {
+   background-color: white;
+   border: 0;
+   padding: 0;
+   &:focus { outline: none; }
+ }
+
+  /**
+  * a tag
+  */
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none;
+}
+
+a {
+  color: $color-normal-text;
+}
