--- a/src/Styles/header.scss
+++ b/src/Styles/header.scss
@@ -1,10 +1,16 @@
 header {
+    overflow: hidden;
     .header {
         &__logo {
             float: left;
+            &__img {
+                width: 175px;
+                height: 50px;
+            }
         }
         &__form {
-            color: red;
+            width: 500px;
+            margin: 0 auto;
         }
         &__banner {
             float: right;
