--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -3,6 +3,8 @@
 @import './topAdContainer.scss';
 @import './search.scss';
 
+@import './Events/index.scss';
+
 html {
     // font-size: 62.5%;
     
@@ -21,3 +23,4 @@ body {
     width: 980px;
     margin: 0 auto;
 }
+
