--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -2,6 +2,7 @@
 @import './header.scss';
 @import './topAdContainer.scss';
 @import './search.scss';
+@import './slide.scss';
 
 @import './Events/index.scss';
 
@@ -24,3 +25,6 @@ body {
     margin: 0 auto;
 }
 
+// .invisible {
+//     display: none;
+// }
