--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -1,6 +1,6 @@
 @import './reset.scss';
 @import './header.scss';
-@import './topAdContainer.scss';
+@import './topBannerContainer.scss';
 @import './search.scss';
 @import './slide.scss';
 
@@ -9,6 +9,19 @@
 html {
     // font-size: 62.5%;
     
+}
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
 }
 
 body {
