--- a/src/Styles/Events/index.scss
+++ b/src/Styles/Events/index.scss
@@ -4,25 +4,7 @@
     width: $width;
 
     .welcome-main-event-viewer-container {
-        height: 330px;
-        background-color: green;
-        position: relative;
-
-        .dots {
-            
-            position: absolute;
-            bottom: 10px;
-            width: 100%;
-            text-align: center;
-
-            .dots-wapper {
-                display: inline-block;
-            }
-            
-            ul {
-                margin: 0 auto;
-            }
-        }
+        
     }
 
     .item-list {
@@ -43,7 +25,7 @@
                 font-weight: bold;
 
                 cursor: pointer;
-                &:hover {
+                &.on {
                     background-color: blue;
                     color: white;
                 }
