--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -3,6 +3,7 @@
 @import './topBannerContainer.scss';
 @import './search.scss';
 @import './slide.scss';
+@import './icons.scss';
 
 @import './Events/index.scss';
 
