--- a/src/Styles/headerNavBar.scss
+++ b/src/Styles/headerNavBar.scss
@@ -1,4 +1,5 @@
 @import './icons.scss';
+@import './colors.scss';
 
 .header__navbar {
     height: 50px;
@@ -18,7 +19,6 @@
         width: 50px;
         background-color: #373f64;
         button {
-            background-image: url('/assets/icons/menu.svg');
             background-size: 50px 50px;
             height: 100%;
             width: 100%;
@@ -48,7 +48,7 @@
     z-index: 1;
 
     &__list {
-        color:red;
+        float: left;
 
         li {
             border-top: 1px solid $color2;
@@ -92,5 +92,62 @@
                 }
             }
         }
+    }
+
+    &__sub-list {
+        float: left;
+
+    }
+}
+
+.sub-category {
+    padding: 10px;
+    font-size: 12px;
+
+    .title {
+        font-weight: bold;
+        position: relative;
+        margin-bottom: 10px;
+
+        a {
+            padding: 4px 12px;
+            display: block;
+        }
+        
+        &::before {
+            content: ' ';
+            height: 100%;
+            width: 4px;
+            background-color: blue;
+            position: absolute;
+
+        }
+    }
+    &__list_container {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 400px;
+        height: 310px;
+
+        
+        ul {
+            width:110px;
+            padding-bottom: 20px;
+
+            li {
+                a {
+                    padding: 4px 5px;
+                    display: block;
+                }
+                &:hover {
+                    background-color: $color-select-gray-block;
+                }
+            }
+
+    
+        }
+
     }
 }
