--- a/src/Styles/headerNavBar.scss
+++ b/src/Styles/headerNavBar.scss
@@ -51,6 +51,7 @@
         float: left;
 
         li {
+            border-right: 1px solid $color2;
             border-top: 1px solid $color2;
             border-bottom: 0;
             width: 150px;
@@ -103,6 +104,9 @@
 .sub-category {
     padding: 10px;
     font-size: 12px;
+    background-color: white;
+    color: $color-gray-text;
+
 
     .title {
         font-weight: bold;
@@ -110,6 +114,7 @@
         margin-bottom: 10px;
 
         a {
+            color: $color-gray-text;
             padding: 4px 12px;
             display: block;
         }
@@ -118,7 +123,7 @@
             content: ' ';
             height: 100%;
             width: 4px;
-            background-color: blue;
+            background-color: $color-moongo;
             position: absolute;
 
         }
@@ -130,6 +135,7 @@
         justify-content: flex-start;
         width: 400px;
         height: 310px;
+        color: $color-gray-text;
 
         
         ul {
@@ -138,6 +144,7 @@
 
             li {
                 a {
+                    color: $color-gray-text;
                     padding: 4px 5px;
                     display: block;
                 }
