--- a/src/Styles/search.scss
+++ b/src/Styles/search.scss
@@ -1,9 +1,11 @@
+@import './colors.scss';
+
 #search {
     .wapper__search {
         width: 100%;
         height: 40px;
         padding-left: 10px;
-        border: 1px solid blue;
+        border: 1px solid $color-moongo;
 
         input {
             width: 100%;
@@ -17,7 +19,7 @@
     .search-button {
         width: 40px;
         height: 40px;
-        background-color: blue;
+        background-color: $color-moongo;
     }
 
     > form {
