--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -4,6 +4,9 @@
 @import './search.scss';
 @import './slide.scss';
 @import './icons.scss';
+@import './box.scss';
+@import './goodsCard.scss';
+@import './imageButton.scss';
 
 @import './Events/index.scss';
 
