--- a/src/Styles/box.scss
+++ b/src/Styles/box.scss
@@ -62,8 +62,28 @@
                 float: left;
             }
 
+            button {
+                $button-height: 50px;
+        
+                position: absolute;
+                background-color: grey;
+                opacity: 0.2;
+                transition: all 0.3s;
+                width: 36px;
+                height: $button-height;
+                top: calc(50% - (#{$button-height}/2));
+                cursor: pointer;
+                left: 0;
+        
+                &.next {
+                    right: 0;
+                }
+        
+                &.invisible {
+                    opacity: 0;
+                }
+            }
         }
-
     }
 }
 
