--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -8,6 +8,7 @@
 @import './goodsCard.scss';
 @import './imageButton.scss';
 @import './const.scss';
+@import './footer.scss';
 
 @import './Events/index.scss';
 
