--- a/src/Styles/headerNavBar.scss
+++ b/src/Styles/headerNavBar.scss
@@ -6,6 +6,7 @@
     display: flex;
     $color1: #606d9a;
     background-color: $color1;
+
     
     a {
         display: flex;
@@ -14,6 +15,10 @@
         align-items: center;
         color: white;
         font-weight: 600;
+
+        &:hover {
+            opacity: 0.7;
+        }
     }
     .all-category {
         width: 50px;
