--- a/src/Styles/search.scss
+++ b/src/Styles/search.scss
@@ -50,7 +50,7 @@
 
     &__buttons {
         button {
-            background-color: yellowgreen;
+            background-color: white;
             width: 15px;
             height: 15px;
             border: 1px solid gray;
