--- a/src/Styles/colors.scss
+++ b/src/Styles/colors.scss
@@ -1,4 +1,5 @@
 $color-normal-text: black;
 $color-gray-text: #555;
 $color-select-gray-block: #eee;
-$color-moongo: #606d9a
+$color-moongo: #606d9a;
+$color-border-main: #dadada;
