--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -10,6 +10,7 @@
 @import './const.scss';
 @import './footer.scss';
 @import './banners.scss';
+@import './page.scss';
 
 @import './Events/index.scss';
 
