--- a/src/Styles/search.scss
+++ b/src/Styles/search.scss
@@ -31,7 +31,7 @@
 .container-quick-search {
     font-size: 12px;
     display: flex;
-    padding: 4px 0;
+    padding: 4px 0 8px;
 
     &__list {
         display: flex;
