update style for nav

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -11,6 +11,7 @@
 @import './footer.scss';
 @import './banners.scss';
 @import './page.scss';
+@import './navCategory.scss';
 
 @import './Events/index.scss';
 
