--- a/src/Styles/page.scss
+++ b/src/Styles/page.scss
@@ -1,8 +1,13 @@
 .page {
     margin-top: 10px;
-    .category-pgae {
-        &__category {
+    overflow: hidden;
+    min-height: 800px;
 
+    .category-page {
+        &__category {
+            border: 1px solid #9eadca;
+            float: left;
+            width: 170px;
         }
         &__contents {
     
