--- a/src/Styles/box.scss
+++ b/src/Styles/box.scss
@@ -4,8 +4,8 @@
     line-height: 18px;
     height: 35px;
     color: #000;
-    font-family: 'Malgun Gothic','Apple SD Neo Gothic','Dotum','Sans-Serif';
-    
+    font-family: 'Malgun Gothic', 'Apple SD Neo Gothic', 'Dotum', 'Sans-Serif';
+
     &:hover {
         color: #3c5fdf;
         text-decoration: underline;
@@ -21,16 +21,17 @@
     line-height: 18px;
     color: #555;
     padding: 2px 4px;
-    font-family: 'Malgun Gothic','Apple SD Neo Gothic','Dotum','Sans-Serif';
+    font-family: 'Malgun Gothic', 'Apple SD Neo Gothic', 'Dotum', 'Sans-Serif';
+
     &:hover,
     &.on {
         background-color: #9cafe9;
         color: #fff;
     }
-    
+
 }
 
-.box  {
+.box {
 
     $padding-height: 10px;
 
@@ -50,8 +51,10 @@
             @include box-title();
         }
     }
+
     .contents-container {
         position: relative;
+
         h3 a {
             @include section-title();
         }
@@ -59,6 +62,7 @@
         .list-container {
             position: absolute;
             top: 40px;
+
             li {
                 margin-right: 22px;
                 float: left;
@@ -70,7 +74,7 @@
 
             button {
                 $button-height: 50px;
-        
+
                 position: absolute;
                 background-color: grey;
                 opacity: 0.2;
@@ -79,14 +83,15 @@
                 height: $button-height;
                 top: calc(50% - (#{$button-height}/2));
                 cursor: pointer;
-                
+
                 &.prev {
                     left: 0;
                 }
+
                 &.next {
                     right: 0;
                 }
-        
+
                 &.invisible {
                     opacity: 0;
                 }
@@ -95,5 +100,11 @@
     }
 }
 
-.box-welcome1 {
+.box-welcome1 {}
+
+.box-welcome-picks {
+    .title a p {
+        color: #2ac557;
+        display: inline-block;
+    }
 }
