--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -12,12 +12,14 @@
 @import "./banners.scss";
 @import "./page.scss";
 @import "./navCategory.scss";
+@import "./topInfoBar.scss";
 
 @import "./Events/index.scss";
 
 html {
   font-size: 16px;
 }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
