--- a/src/Styles/footer.scss
+++ b/src/Styles/footer.scss
@@ -42,8 +42,9 @@ footer {
       width: 200px;
     }
   }
+
   .content-container {
-    margin: $margin-size;
+    margin: $margin-size 0;
     font-size: 11px;
     line-height: 18px;
 
