--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -13,6 +13,9 @@
 @import "./page.scss";
 @import "./navCategory.scss";
 @import "./topInfoBar.scss";
+@import "./buttons.scss";
+@import "./bookPage.scss";
+@import "./nameIsValue.scss";
 
 @import "./Events/index.scss";
 
