--- a/src/Styles/icons.scss
+++ b/src/Styles/icons.scss
@@ -1,57 +1,82 @@
 @mixin menu_main {
-    -webkit-mask: url('/assets/icons/menu_main.svg') no-repeat center;
-    mask: url('/assets/icons/menu_main.svg') no-repeat center;
+  -webkit-mask: url("/assets/icons/menu_main.svg") no-repeat center;
+  mask: url("/assets/icons/menu_main.svg") no-repeat center;
 }
 
 @mixin menu_x($color) {
-    -webkit-mask: url('/assets/icons/menu_x.svg') no-repeat center;
-    mask: url('/assets/icons/menu_x.svg') no-repeat center;
-    background-color: $color;
-    -webkit-mask-size: 30px;
-    mask-size: 30px;
+  -webkit-mask: url("/assets/icons/menu_x.svg") no-repeat center;
+  mask: url("/assets/icons/menu_x.svg") no-repeat center;
+  background-color: $color;
+  -webkit-mask-size: 30px;
+  mask-size: 30px;
 }
 
 @mixin chevron-right($color) {
-    -webkit-mask: url('/assets/icons/chevron-right.svg') no-repeat center;
-    mask: url('/assets/icons/chevron-right.svg') no-repeat center;
-    background-color: $color;
-    -webkit-mask-size: contain;
-    mask-size: contain;
+  -webkit-mask: url("/assets/icons/chevron-right.svg") no-repeat center;
+  mask: url("/assets/icons/chevron-right.svg") no-repeat center;
+  background-color: $color;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+}
+@mixin arrow_sans_right($color) {
+  -webkit-mask: url("/assets/icons/arrow_sans_right.svg") no-repeat center;
+  mask: url("/assets/icons/arrow_sans_right.svg") no-repeat center;
+  background-color: $color;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+}
+@mixin arrow_sans_right-after($color, $size, $top) {
+  &::after {
+    content: " ";
+    right: 2px;
+    display: inline-block;
+    position: absolute;
+    width: $size;
+    height: $size;
+    height: 100%;
+    top: $top;
+
+    @include arrow_sans_right($color);
+  }
+}
+@mixin arrow_sans_left-after($color, $size) {
+  @include arrow_sans_right-after($color, $size, -1px);
+  transform: rotate(180deg);
 }
 
 .chevron-right {
-    @include chevron-right(#fff);
+  @include chevron-right(#fff);
 }
 
 @mixin chevron-right-after($color, $size) {
-    &::after {
-        content: ' ';
-        right: 4px;
-        display: inline-block;
-        position: absolute;
-        width: $size;
-        height: $size;
-        height: 100%;
-        top: 0;
-        @include chevron-right($color);
-    }
+  &::after {
+    content: " ";
+    right: 4px;
+    display: inline-block;
+    position: absolute;
+    width: $size;
+    height: $size;
+    height: 100%;
+    top: 0;
+    @include chevron-right($color);
+  }
 }
 
 @mixin chevron-left-after($color, $size) {
-    @include chevron-right-after($color, $size);
-    transform: rotate(180deg);
+  @include chevron-right-after($color, $size);
+  transform: rotate(180deg);
 }
 
 @mixin menu-x-after($color, $size) {
-    &::after {
-        content: ' ';
-        right: 4px;
-        display: inline-block;
-        position: absolute;
-        width: $size;
-        height: $size;
-        height: 100%;
-        top: 0;
-        @include menu_x($color)
-    }
+  &::after {
+    content: " ";
+    right: 4px;
+    display: inline-block;
+    position: absolute;
+    width: $size;
+    height: $size;
+    height: 100%;
+    top: 0;
+    @include menu_x($color);
+  }
 }
